@@ -4,7 +4,9 @@
         - Port to Moose
         - Added test for action stringify
         - Added test for component instances getting $self->{value} from config.
-        - Chained doc improvements (rev 8326-8328)
+        - Add Catalyst::Response->print() method (ilmari)
+         
+         ))
 
 5.7XXXXXX XXXX
         - Fix some Win32 test failures
